--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+input, button {
+  border-radius: 0px !important;
+}
+
+.logo {
+  width: 9.375rem;
+  margin-top: -3.25rem;
+}
+
+.main-search {
+  margin-top: 30vh;
+}
+
+.loading {
+  height: 20vh;
+}
+
+.weather-card {
+  width: 30vw;
 }
